--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 				<li class="main-builets__item"><img src="img/icon_2.svg" alt=""><span>Все необходимые кисти <br> всегда под
 						рукой</span></li>
 				<li class="main-builets__item"><img src="img/icon_3.svg" alt=""><span>Изящный цвет и дизайн</span></li>
-				<li class="main-builets__item"><img src="img/icon_4.svg" alt=""><span>Высокое качество, известный производитель</span></li>
+				<li class="main-builets__item"><img src="img/icon_4.svg" alt=""><span>Высокое качество, известный
+						производитель</span></li>
 			</ul>
 		</div>
 		<a href="#form" class="btn">ЗАКАЗАТЬ</a>
@@ -127,8 +128,8 @@
 		</section>
 
 		<section class="block3 grey">
-				<img class="border__top" src="img/border-top.png" alt="">
-				<img class="border__bot" src="img/border-bot.png" alt="">
+			<img class="border__top" src="img/border-top.png" alt="">
+			<img class="border__bot" src="img/border-bot.png" alt="">
 			<div class="heading">
 				<h2 class="title-1"><b>Pretty MakeUp</b> по сравнению
 					со спонжем</h2>
@@ -193,14 +194,28 @@
 		</section>
 
 		<section class="block5 grey">
-				<img class="border__top" src="img/border-top.png" alt="">
-				<img class="border__bot" src="img/border-bot.png" alt="">
+			<img class="border__top" src="img/border-top.png" alt="">
+			<img class="border__bot" src="img/border-bot.png" alt="">
 			<div class="heading">
 				<h2 class="title-1">Отзывы о наборе
 					кистей <b>Pretty MakeUp</b></h2>
 				<hr class="heading__hr">
 			</div>
 			<div class="block5-reviews">
+				<div class="reviews-item">
+					<div class="reviews__top"><img src="img/ava3.png" alt="">Mary_samn</div>
+					<div class="img-wrap"><img src="img/rev3.jpg" alt=""></div>
+					<div class="reviews__soc"><img src="img/socials.svg" alt=""></div>
+					<div class="reviews__liked"><img src="img/liked3.png" alt=""><span>Liked <b>ninavon</b> and
+							<b>5.672</b></span></div>
+					<p class="reviews__content"><b>Mary_samn</b> Понравился набор-трансформер. До этого носила с собой несколько
+						разных кисточек, теперь ношу одну. Все остальные внутри нее. При необходимости очень просто и быстро их
+						достать. Понравился еще сам ворс у кисточек. Косметические средства наносятся великолепно, комочков не
+						образуется. За 2 месяца использования набора каких-либо недостатков не обнаружила. Все нравится и все на
+						высшем уровне. Посоветовала такой набор еще подруге, она тоже от него в восторге
+					</p>
+					<div class="reviews__bot"><b>Migel</b> <img src="img/love.png" alt=""></div>
+				</div>
 				<div class="reviews-item">
 					<div class="reviews__top"><img src="img/ava1.png" alt="">Simona.1</div>
 					<div class="img-wrap"><img src="img/rev1.jpg" alt=""></div>
@@ -230,20 +245,7 @@
 					</p>
 					<div class="reviews__bot"><b>Milana_4</b> Это очень круто! Красавица <img src="img/lol.svg" alt=""></div>
 				</div>
-				<div class="reviews-item">
-					<div class="reviews__top"><img src="img/ava3.png" alt="">Mary_samn</div>
-					<div class="img-wrap"><img src="img/rev3.jpg" alt=""></div>
-					<div class="reviews__soc"><img src="img/socials.svg" alt=""></div>
-					<div class="reviews__liked"><img src="img/liked3.png" alt=""><span>Liked <b>ninavon</b> and
-							<b>5.672</b></span></div>
-					<p class="reviews__content"><b>Mary_samn</b> Понравился набор-трансформер. До этого носила с собой несколько
-						разных кисточек, теперь ношу одну. Все остальные внутри нее. При необходимости очень просто и быстро их
-						достать. Понравился еще сам ворс у кисточек. Косметические средства наносятся великолепно, комочков не
-						образуется. За 2 месяца использования набора каких-либо недостатков не обнаружила. Все нравится и все на
-						высшем уровне. Посоветовала такой набор еще подруге, она тоже от него в восторге
-					</p>
-					<div class="reviews__bot"><b>Migel</b> <img src="img/love.png" alt=""></div>
-				</div>
+
 			</div>
 		</section>
 
@@ -256,7 +258,7 @@
 				<div class="block6-item">
 					<img src="img/b61.svg" alt="">
 					<p>Оставьте <br> заявку <br>
-							на нашем сайте</p>
+						на нашем сайте</p>
 				</div>
 				<div class="block6-item">
 					<img src="img/b62.svg" alt="">
@@ -270,45 +272,46 @@
 		</section>
 
 		<footer class="main">
-				<span class="main__top">Кисти для макияжа <strong>Pretty MakeUp</strong></span>
-				<div class="main-bg">
-					<img class="main-bg__img" src="img/main-bg.png" alt="">
-					<div class="main__product">
-						<div class="img-wrap"><img src="img/main-product.png" alt=""></div>
-						<div class="main__price"><span>50%</span></div>
-					</div>
+			<span class="main__top">Кисти для макияжа <strong>Pretty MakeUp</strong></span>
+			<div class="main-bg">
+				<img class="main-bg__img" src="img/main-bg.png" alt="">
+				<div class="main__product">
+					<div class="img-wrap"><img src="img/main-product.png" alt=""></div>
+					<div class="main__price"><span>50%</span></div>
 				</div>
-				<div class="main-price">
-					<div class="main-price__item main-price__item--before">
-						<span>старая цена</span>
-						<s>98€</s>
-					</div>
-					<div class="main-price__item main-price__item--after">
-						<span>новая цена</span>
-						<b>49€</b>
-					</div>
+			</div>
+			<div class="main-price">
+				<div class="main-price__item main-price__item--before">
+					<span>старая цена</span>
+					<s>98€</s>
 				</div>
-				<div class="main-builets">
-					<p class="main-builets__top">Один компактный набор <strong>вместо <br> беспорядка в косметическе!</strong></p>
-					<ul class="main-builets__list">
-						<li class="main-builets__item"><img src="img/icon_1.svg" alt=""><span>Кисть-трансформер – 4 в 1</span></li>
-						<li class="main-builets__item"><img src="img/icon_2.svg" alt=""><span>Все необходимые кисти <br> всегда под
-								рукой</span></li>
-						<li class="main-builets__item"><img src="img/icon_3.svg" alt=""><span>Изящный цвет и дизайн</span></li>
-						<li class="main-builets__item"><img src="img/icon_4.svg" alt=""><span>Высокое качество, известный производитель</span></li>
-					</ul>
+				<div class="main-price__item main-price__item--after">
+					<span>новая цена</span>
+					<b>49€</b>
 				</div>
-				<div class="form" id="form">
-					<form action="" class="offer">
-						<h2>Заполните форму</h2>
-						<label for="name">Например, Ева</label>
-						<input type="text" name="name" required placeholder="Имя">
-						<label for="phone">Например, +79994563421</label>
-						<input type="tel" name="phone" required placeholder="Телефон">
-						<button class="btn" type="submit"><span>ЗАКАЗАТЬ</span></button>
-					</form>
-				</div>
-			</footer>
+			</div>
+			<div class="main-builets">
+				<p class="main-builets__top">Один компактный набор <strong>вместо <br> беспорядка в косметическе!</strong></p>
+				<ul class="main-builets__list">
+					<li class="main-builets__item"><img src="img/icon_1.svg" alt=""><span>Кисть-трансформер – 4 в 1</span></li>
+					<li class="main-builets__item"><img src="img/icon_2.svg" alt=""><span>Все необходимые кисти <br> всегда под
+							рукой</span></li>
+					<li class="main-builets__item"><img src="img/icon_3.svg" alt=""><span>Изящный цвет и дизайн</span></li>
+					<li class="main-builets__item"><img src="img/icon_4.svg" alt=""><span>Высокое качество, известный
+							производитель</span></li>
+				</ul>
+			</div>
+			<div class="form" id="form">
+				<form action="" class="offer">
+					<h2>Заполните форму</h2>
+					<!-- <label for="name">Например, Ева</label> -->
+					<input type="text" name="name" required placeholder="Имя">
+					<!-- <label for="phone">Например, +79994563421</label> -->
+					<input type="tel" name="phone" required placeholder="Телефон">
+					<button class="btn" type="submit"><span>ЗАКАЗАТЬ</span></button>
+				</form>
+			</div>
+		</footer>
 	</main>
 
 	<script src="libs/slick/slick.min.js"></script>
